@@ -32,7 +32,7 @@ other. Such a file is created by simply joining two complete files with
 \fBcat(1)\fP or a similar tool.
 .PP
 By default \fBoggsplit\fP extracts all streams, chained as well as grouped.
-Since \fBoggsplit\fP does not care about about stream formats and thus works
+Since \fBoggsplit\fP does not care about about stream formats, it works
 with any type of stream. For the same reason, it cannot split the file at an
 arbitrary point. For such functionality, use a specialized tool like
 \fBvcut(1)\fP.
